@@ -63,6 +63,7 @@
 	- add default value for buildroot macro.
 	- permit macros to be marked as readonly (i.e. cannot be redefined).
 	- ignore BuildRoot: and %clean from spec files.
+	- make rpmvercmp a vector, add a (*EVRcmp) vector to rpmds.
 
 4.4.5 -> 4.4.6:
 	- start 4.4.6 development.
